public/style.css
/* Basic site styling */

* {
  box-sizing: border-box;
  font-family: 'Helvetica', sans-serif;
}

body {
  margin: 0;
}

.center {
  margin: 0 auto;
}


/* Styling for site subsections */

#header {
  position: relative;
  height: 25%;
  width: 100%;
  background: lightblue;
}

#site_wrap {
  position: absolute;
  height: 100vh;
  width: 100vw;
  background: lightyellow;
}

#box_examples {
  position: relative;
  height: 75%;
  width: 100%;
}


/* Styling for common elements shared for both examples */

.parent {
  position: relative;
  height: 200px;
  width: 200px;
  background: white;
  border: 1px solid black;
  margin: 0 auto;
}

.child {
  position: relative;
  height: 100px;
  width: 100px;
  background: blue;
  border: 1px dotted black;
}

/*** Implementation-specific styling ***/

/* Margin implementation styling */

#margin_area {
  position: relative;
  width: 50%;
  height: 100%;
  float: left;
  background: lightyellow;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

#parent_box_margin {

}

#child_box_margin {

}


/* Flexbox implementation styling */

#flexbox_area {
  position: relative;
  width: 50%;
  height: 100%;
  float: left;
  background: lightgreen;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

#parent_box_flexbox {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

#child_box_flexbox {
  margin: 0 auto;
}

